# FeedbackManagementWeb/Refrence/swagger.json
@@ -484,6 +484,14 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "state",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "$ref": "#/components/schemas/FeedbackState"
+            }
           }
         ],
         "responses": {
@@ -739,6 +747,49 @@
       }
     },
     "/api/Feedbacks/ArchiveFeedbacks": {
+      "post": {
+        "tags": [
+          "Feedbacks"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Feedbacks/RecycleFeedbacks": {
       "post": {
         "tags": [
           "Feedbacks"
